# glyphforge

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/domain/: entities.rs
core/src/domain/entities/: ascii_art.rs  ascii_col.rs  ascii_grid.rs  ascii_none.rs  ascii_renderable.rs  ascii_renderer.rs  ascii_renderer_in_house_impl.rs  ascii_renderer_standard_impl.rs  ascii_row.rs  glyph.rs  glyph_col.rs  glyph_grid.rs  glyph_rendering_engine.rs  luma_pixel.rs
crates/libs/glyphforge-ascii/: Cargo.toml
crates/libs/glyphforge-ascii/src/domain/: entities.rs
crates/libs/glyphforge-core/: Cargo.toml
crates/libs/glyphforge-image/src/domain/entities/: glyph_image.rs  luma_image.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/domain/: entities.rs
crates/libs/lib-image/: Cargo.toml
crates/services/cli/: Cargo.toml
crates/services/cli/src/: main.rs
crates/services/glyphforge-cli/: Cargo.toml
crates/services/glyphforge-cli/src/: main.rs
glyphforge-ascii/src/domain/: entities.rs
glyphforge-ascii/src/domain/entities/: glyph_engine_ascii_impl.rs
glyphforge-cli/: Cargo.toml
glyphforge-core/src/domain/: entities.rs
glyphforge-core/src/domain/entities/: glyph.rs  glyph_engine_ascii_impl.rs  glyph_grid.rs  glyph_rendering_engine.rs
glyphforge-image/: Cargo.toml
glyphforge-image/src/domain/: entities.rs
glyphforge-image/src/domain/entities/: luma_image.rs  luma_pixel.rs  rgb_pixel.rs
image_support/: Cargo.toml
image_support/src/domain/: entities.rs
image_support/src/domain/entities/: luma_pixel.rs
(+5 files in other folders)
