[package]
name = "glyphforge-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
glyphforge-core = { path = "../../libs/glyphforge-core" }
glyphforge-image = { path = "../../libs/glyphforge-image" }
glyphforge-ascii = { path = "../../libs/glyphforge-ascii" }
ffmpeg-next = "8.0.0"
crossterm = "0.29.0"
scopeguard = "1.2.0"
termsize = "0.1.9"
